# atom-echo-phone

./: AGENTS.md  Cargo.toml  README.md  cfg.toml  clippy.toml  sdkconfig.defaults
.cargo/: config.toml
app/: Cargo.toml  build.rs
app/src/: agc.rs  dsp.rs  lib.rs  main.rs  messages.rs  settings.rs
app/src/tasks/: audio.rs  hardware.rs  mod.rs  rtp.rs  rtp_rx.rs  rtp_tx.rs  sip.rs  task.rs  ui.rs  wifi.rs
atom_echo_hw/: Cargo.toml
atom_echo_hw/src/: imp.rs  lib.rs
hardware/: Cargo.toml
hardware/src/: imp.rs  lib.rs
hardware/src/audio/: host.rs  mod.rs
hardware/src/audio/backends/: es8311.rs  i2s_simple.rs  mod.rs
hardware/src/audio/codec/: mod.rs
hardware/src/imp/esp/: board_atom_echo.rs  board_s3_touch.rs  mod.rs  wifi.rs
rtp_audio/: Cargo.toml
rtp_audio/src/: error.rs  jitter.rs  lib.rs  rtp.rs
rtp_audio/src/codecs/: mod.rs  ulaw.rs
sdp/: Cargo.toml
sdp/src/: lib.rs
sip_core/: Cargo.toml
sip_core/src/: auth.rs  dialog.rs  lib.rs  message.rs  registration.rs  stack.rs  transaction.rs
src/: lib.rs  main.rs
