[workspace]
members = [
    "app",
    "sip_core",
    "sdp",
    "rtp_audio",
    "hardware",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
embuild = { version = "0.33", features = ["espidf"] }
heapless = "0.8"
log = "0.4"
thiserror = { version = "2", default-features = false }
bytemuck = "1.24.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
