[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "atom-echo-phone"
path = "src/main.rs"

[dependencies]
log.workspace = true
thiserror.workspace = true
atom_echo_hw = { path = "../atom_echo_hw" }
rtp_audio = { path = "../rtp_audio" }
sdp = { path = "../sdp" }
sip_core = { path = "../sip_core" }
heapless.workspace = true
static-toml = "1"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.51"

[build-dependencies]
embuild.workspace = true
