[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "atom-echo-phone"
path = "src/main.rs"

[dependencies]
log.workspace = true
thiserror.workspace = true
hardware = { path = "../hardware" }
rtp_audio = { path = "../rtp_audio", features = ["table_decode"]}
sdp = { path = "../sdp" }
sip_core = { path = "../sip_core" }
heapless.workspace = true
static-toml = "1"
bytemuck.workspace = true

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.51"

[build-dependencies]
embuild.workspace = true
