[package]
name = "atom_echo_hw"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
heapless.workspace = true

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.51"
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
esp-idf-sys = "0.36"
