[package]
name = "atom_echo_hw"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
heapless.workspace = true

[target.'cfg(not(target_os = "espidf"))'.dependencies]
rand = "0.9"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.51", features = ["experimental"] }
