[package]
name = "hardware"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["audio-i2s-simple"]
audio-i2s-simple = []
audio-es8311 = []
audio-host = []

[dependencies]
log.workspace = true
thiserror.workspace = true
heapless.workspace = true

[target.'cfg(not(target_os = "espidf"))'.dependencies]
rand = "0.9"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.51", features = ["experimental"] }
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"]}
